modificaçao de titulo do projeto e fontsize do link header

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>desafio-1-scc.andres </title>
+    <title>desafio-1-scc</title>
 </head>
 <body> 
   <div class="container">
